# FLETCHER

./: CONTRIBUTING.md  Cargo.toml  PRODUCT_PLAN.md  README.md  SECURITY.md
.github/workflows/: ci.yml
.roles/: ROLE.md
context/waves/: PHASES.md
context/waves/2026-07-20-public-core/: WAVE.md
context/waves/2026-07-20-public-core/pulses/: pulse-01.md
crates/fletcher-cli/: Cargo.toml
crates/fletcher-cli/src/: main.rs
crates/fletcher-core/: Cargo.toml
crates/fletcher-core/src/: lib.rs
docs/: MAINTENANCE.md
